poprawa błędów -> plan i kreator planów już działają